API and Functionality Extensions
* Changed initial implementation decision to handle all preferences in this service. Now as services need preferences, those services can create and manage them. This means that there are no shared details between this and any other service
* Added more API functionality
* Added new Preference Category, to hopefully make UI rendering easier
