# api.yaml
@@ -194,6 +194,45 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorDetails'
+  '/v1/preferences/name/{name}':
+    get:
+      tags:
+        - Global Preferences Management
+      summary: Get a specific preference by name
+      operationId: getPreferenceByName
+      parameters:
+        - name: name
+          in: path
+          description: Preference name to get preference of
+          required: true
+          schema:
+            type: string
+
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ResponseContainerPreferenceDto'
+        '400':
+          description: Client Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorDetails'
+        '404':
+          description: Not Found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorDetails'
+        '500':
+          description: Internal error has occurred
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorDetails'
   #
   #
   #
@@ -337,10 +376,146 @@ paths:
       responses:
         '405':
           description: Method not allowed
+  # This should absolutely be done with JPA filtering
+  '/v1/preferences/name/{preference_name}/user/{user_uuid}':
+    get:
+      tags:
+        - User Preferences Management
+      summary: Get a specific user's preference by the preference name
+      operationId: getSpecificPreferenceForUserUuidByName
+      parameters:
+        - name: user_uuid
+          in: path
+          description: User uuid to get preferences for
+          required: true
+          schema:
+            type: string
+            format: uuid
+        - name: preference_name
+          in: path
+          description: Preference name to get preferences for
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ResponseContainerUserPreferenceDto'
+        '400':
+          description: Client Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorDetails'
+        '404':
+          description: Not Found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorDetails'
+        '500':
+          description: Internal error has occurred
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorDetails'
   #
   #
   #
   #
+  '/v1/preferences/categories':
+    get:
+      tags:
+        - Preference Category Management
+      summary: Create a new Preference Category
+      operationId: getAllPreferenceCategories
+      parameters:
+        - name: page
+          in: query
+          required: false
+          schema:
+            type: integer
+            format: int32
+            default: 0
+            minimum: 0
+        - name: pageSize
+          in: query
+          required: false
+          schema:
+            type: integer
+            format: int32
+            default: 10
+            minimum: 1
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ResponseContainerCategoryDto'
+        '400':
+          description: Client Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorDetails'
+        '404':
+          description: Not Found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorDetails'
+        '500':
+          description: Internal error has occurred
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorDetails'
+    post:
+      tags:
+        - Preference Category Management
+      summary: Create a preference category
+      operationId: createPreferenceCategory
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/PreferenceCategoryDto'
+        required: true
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ResponseContainerPreferenceCategoryDto'
+        '400':
+          description: Client Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorDetails'
+        '404':
+          description: Not Found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorDetails'
+        '500':
+          description: Internal error has occurred
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorDetails'
+  #
+  #
+  #
+  #
+
+
 
 components:
   schemas:
@@ -362,6 +537,36 @@ components:
           type: string
         moreInfo:
           type: string
+    ResponseContainerCategoryDto:
+      type: object
+      properties:
+        success:
+          type: boolean
+        statusDescription:
+          type: string
+        totalElements:
+          type: integer
+          format: int64
+        totalPages:
+          type: integer
+          format: int64
+        pageSize:
+          type: integer
+          format: int64
+        page:
+          type: integer
+          format: int64
+        last:
+          type: boolean
+        size:
+          type: integer
+          format: int32
+        type:
+          type: string
+        data:
+          type: array
+          items:
+            $ref: '#/components/schemas/PreferenceCategoryDto'
     ResponseContainerPreferenceDto:
       type: object
       properties:
@@ -392,6 +597,36 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/PreferenceDto'
+    ResponseContainerPreferenceCategoryDto:
+      type: object
+      properties:
+        success:
+          type: boolean
+        statusDescription:
+          type: string
+        totalElements:
+          type: integer
+          format: int64
+        totalPages:
+          type: integer
+          format: int64
+        pageSize:
+          type: integer
+          format: int64
+        page:
+          type: integer
+          format: int64
+        last:
+          type: boolean
+        size:
+          type: integer
+          format: int32
+        type:
+          type: string
+        data:
+          type: array
+          items:
+            $ref: '#/components/schemas/PreferenceCategoryDto'
     ResponseContainerUserPreferenceDto:
       type: object
       properties:
@@ -428,11 +663,17 @@ components:
         uuid:
           type: string
           format: uuid
+        preferenceCategoryUuid:
+          type: string
+          format: uuid
         name:
           type: string
-        defaultValue:
+        description:
+          type: string
+        defaultSelection:
           type: boolean
           default: false
+
         dateCreated:
           type: string
           format: date-time
@@ -443,9 +684,30 @@ components:
         preferenceUuid:
           type: string
           format: uuid
-        value:
+        userSelection:
           type: boolean
           default: false
+        dateCreated:
+          type: string
+          format: date-time
+          readOnly: true
+    PreferenceCategoryDto:
+      type: object
+      properties:
+        uuid:
+          type: string
+          format: uuid
+        name:
+          type: string
+        # preferences:
+        #   type: array
+        #   items:
+        #     $ref: '#/components/schemas/PreferenceDto'
+        preferenceUuids:
+          type: array
+          items:
+            type: string
+            format: uuid
         dateCreated:
           type: string
           format: date-time
