# server/src/main/java/org/example/todo/preferences/service/PreferenceService.java
@@ -1,10 +1,12 @@
 package org.example.todo.preferences.service;
 
 import lombok.extern.slf4j.Slf4j;
+import org.example.todo.common.exceptions.ResourceNotFoundException;
 import org.example.todo.common.util.ResponseUtils;
 import org.example.todo.preferences.generated.dto.PreferenceDto;
 import org.example.todo.preferences.generated.dto.ResponseContainerPreferenceDto;
 import org.example.todo.preferences.model.Preference;
+import org.example.todo.preferences.model.PreferenceCategory;
 import org.example.todo.preferences.repository.PreferenceRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.PageRequest;
@@ -12,6 +14,7 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.Optional;
 import java.util.UUID;
 
 @Service
@@ -21,6 +24,8 @@ public class PreferenceService {
 	private PreferenceRepository preferenceRepository;
 
 	private UserPreferenceService userPreferenceService;
+
+	private PreferenceCategoryService preferenceCategoryService;
 
 	//TODO: Enable filtering and sorting
 	public List<Preference> getAllPreferences() {
@@ -42,6 +47,32 @@ public class PreferenceService {
 		preferenceRepository.deleteByUuid(uuid);
 	}
 
+	@Transactional
+	public Preference getPreferenceByName(String name) {
+		List<Preference> userPreferences = getAllPreferences();
+		Optional<Preference> selectedUserPreference = userPreferences.stream().filter(preference -> preference.getName().equalsIgnoreCase(name)).findFirst();
+		return selectedUserPreference.orElseThrow(() -> new ResourceNotFoundException(String.format("Could not find preference with name %s", name)));
+
+	}
+
+	@Transactional
+	public Preference addNewPreference(PreferenceDto preferenceDto) {
+		log.debug("{}", preferenceDto);
+		PreferenceCategory preferenceCategory = preferenceCategoryService.getPreferenceCategoryByUuid(preferenceDto.getPreferenceCategoryUuid());
+		Preference preference = Preference.builder()
+				.name(preferenceDto.getName())
+				.defaultValue(preferenceDto.getDefaultSelection())
+				.preferenceCategory(preferenceCategory)
+				.description(preferenceDto.getDescription())
+				.build();
+		return preferenceRepository.saveAndFlush(preference);
+	}
+
+	@Transactional
+	public ResponseContainerPreferenceDto addNewPreferenceResponse(PreferenceDto preferenceDto) {
+		return ResponseUtils.convertToDtoResponseContainer(addNewPreference(preferenceDto), PreferenceDto.class, ResponseContainerPreferenceDto.class);
+	}
+
 	@Autowired
 	public void setPreferenceRepository(PreferenceRepository preferenceRepository) {
 		this.preferenceRepository = preferenceRepository;
@@ -50,5 +81,10 @@ public class PreferenceService {
 	@Autowired
 	public void setUserPreferenceService(UserPreferenceService userPreferenceService) {
 		this.userPreferenceService = userPreferenceService;
+	}
+
+	@Autowired
+	public void setPreferenceCategoryService(PreferenceCategoryService preferenceCategoryService) {
+		this.preferenceCategoryService = preferenceCategoryService;
 	}
 }
